5-link-github-with-project: Updated the image in the readme and footer.

--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -12,6 +12,13 @@
   justify-content: center;
 }
 
+.git-version {
+  position: absolute;
+  left: 95%;
+  color: #00c853;
+  font-weight: bold;
+}
+
 /* Footer links */
 .footer a {
   color: var(--footer-link-color);
