--- a/frontend/src/styles/GeneralFooter.css
+++ b/frontend/src/styles/GeneralFooter.css
@@ -13,3 +13,10 @@
   max-width: 1200px;
   margin: auto;
 }
+
+.git-version {
+  position: absolute;
+  left: 95%;
+  color: #00c853;
+  font-weight: bold;
+}
